index.css
@font-face {
    font-family: Inter;
    src: url(fonts/Inter-VariableFont_slnt\,wght.ttf);
}

* {
    font-family: Inter;
    color: #E4E5EA;
    font-size: 16px;
}

body {
    width: 80%;
    margin: 0px auto 30px;
    display: grid;
    grid-template-columns: repeat(12, auto);
    grid-template-rows: 3rem auto auto;
    grid-template-areas:
        'header header header'
        'menu menu menu'
        'footer footer footer';
    background: #0E1014;
    column-gap: 1%;
    row-gap: 1em;
}

header {
   grid-column: 1 / 12;
   display: grid;
   grid-template-columns: repeat(4, 1fr) auto auto;
   grid-template-rows: repeat(2fr);
   grid-template-areas:
   'logo menu menu menu phone contacts'
   'logo_description null null null null null';
   column-gap: 1em; 
}

main {
    grid-column: 1 / 12;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-areas:
    'left null right';
    margin: 0 0;
}

footer {
    grid-column: 1 / 12;
}

.footer__wrapper {
    display: flex;
    justify-content: space-between;
}

menu {
    width: 100%;
    grid-area: menu;
    display: inline-flex;
    margin: 3px 0 0 0;
    padding: 0;
    flex-wrap: wrap;
}

menu > * {
    padding: 0 1em;
    font-size: 16px;
}

.header__contacts {
    grid-area: contacts;
    /* align-self: center; */
    margin-top: 3px;
}

.header__contacts > * {
    padding-left: 0.8em;
}

.header__logo {
    grid-area: logo;
}

.header__logo_description {
    font-size: 10px;
}

.header__phone {
    grid-area: phone;
    margin-top: 3px;
    font-size: 16px;
}


.footer__chapter {
    display: flex;
    flex-direction: column;
}

.footer__chapter a {
    margin-top: 10px;
    cursor: pointer;
}

.footer__chapter__title {
    font-size: 14px;
    text-transform: uppercase;
    color: #656566;
}

.footer__chapter__column {
    display: flex;
    flex-direction: column;
}
.footer__chapter__contacts > *{
    margin-bottom: 22px;
}

.footer__chapter__row {
    display: flex;
    flex-direction: row;
    gap: 3em
}

h1, h1 > * {
    font-size: 48px;
    margin-top: 0;
}

h2, h2 > * {
    font-size: 18px;
}

.gradient {
    background-image: linear-gradient(90deg, #FCB045, #FF3F78);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: bold;
    font-size: inherit;
}

.main__left {
    grid-area: left;
}

.main__right {
    grid-area: right;
    
    display: grid;
    justify-items: self-end;
    text-align: right;
}

.advantages_mobile {
    display: none;
}

.main__button {
    padding: 20px 35px;
    background: #4077F3;
    border-width: 0px;
    cursor: pointer;
    grid-area: 5/9/6/12;
}

.right {
    align-items: self-end;
}

.security-policy {
    width: 100%;
}

.security-policy * {
    display: block;
    text-align: end;
    font-size: 12px;
    font-weight: 400;
    margin-bottom: 6px;
    padding: 0;
}

.security-policy > a {
    text-decoration: underline;
}

.footer__chapter__messangers > * {
    margin-left: 14px;
}

.sphere-purple {
    width: 60px;
    height: 60px;
    border-radius: 30px;
    background: radial-gradient(64% 64% at 27.25% 26.5%, rgba(236, 208, 255, 0.64) 0%, rgba(161, 93, 207, 0.24) 59.67%, rgba(118, 49, 164, 0.208) 78.59%, rgba(86, 24, 128, 0.232) 100%);
    box-shadow: 3px 6px 27px -10px #B176D940;
    filter: blur(5px);
    backdrop-filter: blur(2px);
    grid-area: 1 / 8 / 2 / 9;
}

.sphere-brown {
    width: 84px;
    height: 84px;
    border-radius: 42px;
    background: radial-gradient(64% 64% at 27.25% 26.5%, rgba(255, 208, 208, 0.536) 0%, rgba(212, 93, 93, 0.264) 59.67%, rgba(167, 49, 49, 0.248) 78.59%, rgba(130, 25, 25, 0.248) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
    box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.25);
    backdrop-filter: blur(2px);
    grid-column: 4 / 5;
}

.sphere-brown-small {
    width: 28px;
    height: 28px;
    border-radius: 14px;
    background: radial-gradient(64% 64% at 27.25% 26.5%, rgba(255, 208, 208, 0.48) 0%, rgba(212, 93, 93, 0.248) 59.67%, rgba(167, 49, 49, 0.264) 78.59%, rgba(130, 25, 25, 0.232) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
    box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.25);
    filter: blur(2.5px);
    backdrop-filter: blur(2px);
    grid-area: 5/7/6/8;
    align-self: center;
}

.red-shadow {
    width: 312px;
    height: 312px;
    border-radius: 156px;
    background: #961A1A;
    opacity: 0.5;
    filter: blur(196px);
    margin: -180px -80px;
}

.purple-shadow {
    width: 260px;
    height: 260px;
    border-radius: 130px;
    background: #833AB4;
    opacity: 0.5;
    filter: blur(196px);
    grid-area: 1 / 2 / 1 / 4;
}


.advantages {
    display: grid;
    grid-template-columns: 1fr 1fr;
    row-gap: 0.8em;
    column-gap: 0.8em;
}

.advantages * {
    text-align: right;
    margin: 6px 0;
}

.advantages > div p:first-child {
    font-weight: 500;
    font-size: 18px;
    text-transform: uppercase;
}

@media (max-width: 768px) {
    body {
        width: auto;
        margin: 0;
        row-gap: 0;
        column-gap: 0;
    }

    h1, h1 > * {
        font-size: 36px;
    }

    .advantages,
    .header__logo,
    .header__phone,
    .header__contacts,
    .header__logo_description {
        display: none;
    }

    menu { 
        overflow-x: scroll;
        overflow-y: hidden;
        flex-wrap: nowrap;
        align-items: center;
        padding: 1.5em 0;
        grid-column: 1 / 13;
    }

    menu > * {
        padding: 0 14px;
    }

    menu:last-child {
        padding: 0;
    }

    menu::-webkit-scrollbar {
        width: 0px;
    }

    .purple-shadow {
        grid-area: 2/ 6 /3 / 12;
        margin: 80px 0;
    }

    .red-shadow {
        width: 312px;
        height: 312px;
        border-radius: 156px;
        background: #961A1A;
        opacity: 0.5;
        filter: blur(196px);
        margin: -180px 0px;
    }

    .footer__wrapper {
        flex-direction: column;
    }

    .main__button {
        display: none;
    }

    .sphere-brown-small {
        align-self: self-end;
        grid-area: 2 / 1 /3 / 2;
        margin: 0 0 0 2em;
        width: 44px;
        height: 44px;
        border-radius: 22px;
    }

    .sphere-brown {
        display: none;
    }

    .sphere-purple  {
        grid-area: 2 / 8 /3 / 12;
        align-self: center;
        justify-self: end;
        margin-top: 3em 0 0 0 ;
    }

    main {
        position: relative; 
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr;
        grid-template-areas:
            'left'
            'right';
        margin: 0 0;
        padding: 3em 1em;
        overflow: hidden;
        grid-area: 2/ 1 /3 / 12;
    }

    main::before {    
        content: "";
        background-image: url(./images/fon.png);
        background-size: cover;
        position: absolute;
        top: 0px;
        right: 0px;
        bottom: 0px;
        left: 0px;
        opacity: 0.15;
    }

    .main__right {
        grid-column: 1 / 12;
        justify-items: self-start;
        text-align: left;
        margin-top: 40px;
    }

    .right {
        
        align-items: self-start;
    }

    .security-policy > * {
        text-align: left;
        align-items: self-start;
    }

    footer {
        padding: 14px;
    }

    .footer__chapter {
        margin: 14px 0;
    }
    
    .advantages_mobile {
        display: grid;
        grid-template-columns: 1fr 1fr;
    }

    .advantages_mobile p {
        margin: 0.4em 0;
    }

    .advantages_mobile span {
        margin-right: 0.5em;
    }
}

